infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: amypyae/posts:0.0.1
          imagePullPolicy: Never
---
kind: Service
apiVersion: v1
metadata:
  name:  posts-clusterip-srv
spec:
  selector:
    app:  posts
  type:  ClusterIP
  ports:
  - name:  posts
    protocol: TCP
    port:  4000
    targetPort:  4000
